--- a/style.css
+++ b/style.css
@@ -87,22 +87,22 @@ p {
   text-decoration: underline;
 }
 
-.mt-5 {
-  margin: 100px;
-}
-
-@media (max-width: 900px) {
-  .yoga-project-image,
-  .weather-project-image,
-  .yogurt-project-image {
-    display: none;
-  }
-
+@media (max-width: 576px) {
   h1 {
-    font-size: 80px;
+    font-size: 48px;
+    line-height: 1.5;
   }
 
-  .row {
+  h2 {
+    font-size: 32px;
+    text-align: center;
+  }
+  p {
+    text-align: center;
+  }
+  .project-link {
     display: block;
+    text-align: center;
+    margin: 20px;
   }
 }
